[gd_scene load_steps=15 format=3 uid="uid://c2wkalqtpue3v"]

[ext_resource type="Script" uid="uid://lp8qrfdcor2w" path="res://puzzles/graph_based_puzzles/connect_portals_slide_rooms/room/Room.gd" id="1_j33j0"]
[ext_resource type="PackedScene" uid="uid://bdlw7q3lk88r2" path="res://puzzles/graph_based_puzzles/connect_portals_slide_rooms/wall/wall.tscn" id="1_jm6y3"]
[ext_resource type="Script" uid="uid://bo7e47lx1xl3u" path="res://puzzles/graph_based_puzzles/connect_portals_slide_rooms/wall/WallConfig.gd" id="2_tku2a"]
[ext_resource type="Script" uid="uid://cjygd0iam6vsv" path="res://puzzles/graph_based_puzzles/connect_portals_slide_rooms/room/RoomConfig.gd" id="3_qx3y5"]
[ext_resource type="Script" uid="uid://cg3gpis6pp2qx" path="res://puzzles/graph_based_puzzles/connect_portals_slide_rooms/room/player_reparenter.gd" id="5_qx3y5"]

[sub_resource type="Resource" id="Resource_fntg6"]
script = ExtResource("2_tku2a")
wall_enabled = false
doorway_enabled = false
door_open = true
switch_enabled = false

[sub_resource type="Resource" id="Resource_et4wo"]
script = ExtResource("2_tku2a")
wall_enabled = false
doorway_enabled = false
door_open = true
switch_enabled = false

[sub_resource type="Resource" id="Resource_cy34l"]
script = ExtResource("2_tku2a")
wall_enabled = false
doorway_enabled = false
door_open = true
switch_enabled = false

[sub_resource type="Resource" id="Resource_lbx1e"]
script = ExtResource("2_tku2a")
wall_enabled = false
doorway_enabled = false
door_open = true
switch_enabled = false

[sub_resource type="Resource" id="Resource_0i02g"]
script = ExtResource("3_qx3y5")
room_type = 0
rotation_90 = 0
n_wall = SubResource("Resource_et4wo")
w_wall = SubResource("Resource_lbx1e")
e_wall = SubResource("Resource_fntg6")
s_wall = SubResource("Resource_cy34l")

[sub_resource type="BoxShape3D" id="BoxShape3D_avm4t"]
size = Vector3(34, 1, 34)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_avm4t"]
size = Vector2(8, 8)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6ivlp"]
albedo_color = Color(1, 0.329412, 1, 1)
albedo_texture = SubResource("PlaceholderTexture2D_avm4t")

[sub_resource type="BoxShape3D" id="BoxShape3D_fntg6"]
size = Vector3(34, 16.5, 34)

[node name="Room" type="StaticBody3D" node_paths=PackedStringArray("n_wall", "w_wall", "e_wall", "s_wall")]
script = ExtResource("1_j33j0")
room_config = SubResource("Resource_0i02g")
n_wall = NodePath("NWall")
n_door_open = true
w_wall = NodePath("WWall")
w_door_open = true
e_wall = NodePath("EWall")
e_door_open = true
s_wall = NodePath("SWall")
s_door_open = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_avm4t")

[node name="CSGBox3D" type="CSGBox3D" parent="."]
size = Vector3(34, 1, 34)
material = SubResource("StandardMaterial3D_6ivlp")

[node name="NWall" parent="." instance=ExtResource("1_jm6y3")]
unique_name_in_owner = true
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)
wall_enabled = false

[node name="WWall" parent="." instance=ExtResource("1_jm6y3")]
unique_name_in_owner = true
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)
wall_enabled = false

[node name="EWall" parent="." instance=ExtResource("1_jm6y3")]
unique_name_in_owner = true
wall_enabled = false

[node name="SWall" parent="." instance=ExtResource("1_jm6y3")]
unique_name_in_owner = true
transform = Transform3D(1.31134e-07, 0, -1, 0, 1, 0, 1, 0, 1.31134e-07, 0, 0, 0)
wall_enabled = false

[node name="PlayerReparenter" type="Area3D" parent="."]
script = ExtResource("5_qx3y5")

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerReparenter"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 7.75, 0)
shape = SubResource("BoxShape3D_fntg6")

[connection signal="door_request_activated" from="NWall" to="." method="_on_n_wall_door_request_activated"]
[connection signal="power_rail_connected" from="NWall" to="." method="_on_power_rail_connected"]
[connection signal="power_rail_disconnected" from="NWall" to="." method="_on_power_rail_disconnected"]
[connection signal="door_request_activated" from="WWall" to="." method="_on_w_wall_door_request_activated"]
[connection signal="power_rail_connected" from="WWall" to="." method="_on_power_rail_connected"]
[connection signal="power_rail_disconnected" from="WWall" to="." method="_on_power_rail_disconnected"]
[connection signal="door_request_activated" from="EWall" to="." method="_on_e_wall_door_request_activated"]
[connection signal="power_rail_connected" from="EWall" to="." method="_on_power_rail_connected"]
[connection signal="power_rail_disconnected" from="EWall" to="." method="_on_power_rail_disconnected"]
[connection signal="door_request_activated" from="SWall" to="." method="_on_s_wall_door_request_activated"]
[connection signal="power_rail_connected" from="SWall" to="." method="_on_power_rail_connected"]
[connection signal="power_rail_disconnected" from="SWall" to="." method="_on_power_rail_connected"]
[connection signal="body_entered" from="PlayerReparenter" to="PlayerReparenter" method="_on_body_entered"]
[connection signal="body_exited" from="PlayerReparenter" to="PlayerReparenter" method="_on_body_exited"]
